--- a/index.html
+++ b/index.html
@@ -1,81 +1,117 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel - Sistema de Reservas</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: url('https://images.unsplash.com/photo-1501117716987-c8e1ecb210f3?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
-        }
-        .overlay {
-            background-color: rgba(0, 0, 0, 0.65);
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .container {
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            padding: 50px 20px;
-        }
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-        }
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 40px;
-        }
-        .button-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 20px;
-            justify-items: center;
-            max-width: 800px;
-            margin: auto;
-        }
-        .button-grid a {
-            text-decoration: none;
-            display: inline-block;
-            padding: 15px 25px;
-            border-radius: 8px;
-            background: rgba(255, 255, 255, 0.1);
-            border: 2px solid #fff;
-            color: #fff;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-            text-align: center;
-        }
-        .button-grid a:hover {
-            background: #fff;
-            color: #333;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Hotel - Sistema de Reservas</title>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+    * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    }
+
+    body {
+    font-family: 'Raleway', sans-serif;
+    background: url('https://images.unsplash.com/photo-1501117716987-c8e1ecb210f3?auto=format&fit=crop&w=1500&q=80') no-repeat center center fixed;
+    background-size: cover;
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(2px);
+    z-index: 0;
+    }
+
+    .container {
+    position: relative;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    padding: 60px 30px;
+    border-radius: 20px;
+    max-width: 900px;
+    margin: 20px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    }
+
+    h1 {
+    font-size: 3.2rem;
+    margin-bottom: 10px;
+    font-weight: 800;
+    color: #fff;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+    }
+
+    p {
+    font-size: 1.2rem;
+    margin-bottom: 40px;
+    color: #f0f0f0;
+    }
+
+    .button-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+    width: 100%;
+    }
+
+    .button-grid a {
+    text-decoration: none;
+    padding: 15px 20px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.15);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    color: #fff;
+    font-weight: 600;
+    font-size: 1rem;
+    transition: 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .button-grid a:hover {
+    background: rgba(255, 255, 255, 0.9);
+    color: #2c3e50;
+    transform: translateY(-3px);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    @media (max-width: 600px) {
+    h1 {
+        font-size: 2.2rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    }
+</style>
 </head>
 <body>
-    <div class="overlay"></div>
-    <div class="container">
-        <h1>Bienvenido al Hotel</h1>
-        <p>Administra fácilmente nuestro sistema de reservas</p>
-        <div class="button-grid">
-            <a href="#">Usuarios</a>
-            <a href="#">Habitaciones</a>
-            <a href="#">Reservas</a>
-            <a href="#">Servicios Adicionales</a>
-            <a href="#">Reserva - Servicio</a>
-            <a href="#">Pagos</a>
-            <a href="#">Empleados</a>
-        </div>
+<div class="overlay"></div>
+<div class="container">
+    <h1>Bienvenido al Hotel</h1>
+    <p>Administra fácilmente nuestro sistema de reservas</p>
+    <div class="button-grid">
+    <a href="#">Usuarios</a>
+    <a href="#">Habitaciones</a>
+    <a href="#">Reservas</a>
+    <a href="#">Servicios Adicionales</a>
+    <a href="#">Reserva - Servicio</a>
+    <a href="#">Pagos</a>
+    <a href="#">Empleados</a>
     </div>
+</div>
 </body>
 </html>
