enlazamos las paginas a index.html

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <h1>Bienvenido al Hotel</h1>
         <p>Administra fácilmente nuestro sistema de reservas</p>
         <div class="button-grid">
-            <a href="#">Usuarios</a>
-            <a href="#">Habitaciones</a>
+            <a href="usuarios.html">Usuarios</a>
+            <a href="habitaciones.html">Habitaciones</a>
             <a href="#">Reservas</a>
             <a href="#">Servicios Adicionales</a>
-            <a href="#">Reserva - Servicio</a>
-            <a href="#">Pagos</a>
-            <a href="#">Empleados</a>
+            <a href="reserva_servicio.html">Reserva - Servicio</a>
+            <a href="adminPagos.html">Pagos</a>
+            <a href="empleados.html">Empleados</a>
         </div>
     </div>
 </body>
