--- a/reserva_servicio.html
+++ b/reserva_servicio.html
@@ -6,69 +6,98 @@
     <title>Relación Reserva - Servicio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #fafafa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f0f2f5;
             margin: 0;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
         }
         .container {
-            max-width: 900px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.08);
+            width: 100%;
+            max-width: 1000px;
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 16px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #333333;
+            margin-bottom: 25px;
+            font-size: 2em;
         }
         .actions {
-            text-align: right;
-            margin-bottom: 10px;
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 20px;
         }
         .actions button {
-            background: #17a2b8;
-            color: white;
+            background: #00b4d8;
+            color: #ffffff;
             border: none;
-            padding: 10px 15px;
+            padding: 12px 20px;
             border-radius: 8px;
             cursor: pointer;
-            transition: background 0.3s ease;
+            font-size: 15px;
+            box-shadow: 0 4px 10px rgba(0, 180, 216, 0.3);
+            transition: all 0.3s ease;
         }
         .actions button:hover {
-            background: #117a8b;
+            background: #0077b6;
+            transform: translateY(-1px);
+            box-shadow: 0 6px 16px rgba(0, 119, 182, 0.3);
         }
         table {
             width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 15px;
+            border-collapse: separate;
+            border-spacing: 0 8px;
         }
-        table thead {
-            background: #17a2b8;
+        table thead tr {
+            background: #00b4d8;
             color: white;
+            border-radius: 8px;
         }
         table th, table td {
-            padding: 12px 15px;
+            padding: 14px 20px;
             text-align: left;
-            border: 1px solid #ddd;
         }
-        table tbody tr:nth-child(even) {
-            background: #f4f6f8;
+        table tbody tr {
+            background: #f9fbfc;
+            transition: box-shadow 0.2s ease;
+        }
+        table tbody tr:hover {
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+            background: #f1f5f9;
+        }
+        table tbody tr td {
+            border-bottom: 1px solid #eee;
         }
         .btn-group a {
             text-decoration: none;
-            padding: 6px 12px;
-            border-radius: 6px;
-            margin-right: 5px;
+            padding: 8px 14px;
+            border-radius: 8px;
+            margin-right: 8px;
             color: white;
             font-size: 14px;
+            display: inline-block;
+            transition: all 0.3s ease;
         }
         .btn-edit {
             background-color: #ffc107;
         }
+        .btn-edit:hover {
+            background-color: #e0a800;
+            transform: scale(1.05);
+        }
         .btn-delete {
             background-color: #dc3545;
+        }
+        .btn-delete:hover {
+            background-color: #b52a37;
+            transform: scale(1.05);
         }
     </style>
 </head>
