--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                 <i class="fas fa-bed"></i>
                 Habitaciones
             </a>
-            <a href="#">
+            <a href="reservas.html">
                 <i class="fas fa-calendar-check"></i>
                 Reservas
             </a>
-            <a href="#">
+            <a href="servicios.html">
                 <i class="fas fa-concierge-bell"></i>
                 Servicios
             </a>
